--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@ layout: default
 		{% include section_intro.html %}
 		{% include section_skills.html %}
 		{% include section_workexperience.html %}
-		{% include section_education.html %}
-		{% include section_coursera.html %}
+		{% include section_team.html %}
 		{% include section_github.html %}
-		{% include section_mobileapps.html %}
 		{% include section_additionalinfo.html %}
 	</div>
 	<div class="col-md-3">
